themes/custom/mat/sass/components/paragraphs/_paragraph--landing-page-hero.scss
// ========================================
//
// @file _paragraph--landing-page-hero.scss
// Paragraph hero element on the landing page
// ========================================

// Paragraph hero
// -----------------------------------------------------------------------------
.paragraph--type--landing-page-hero {
  position: relative;
  @include gradient-blue();
  color: $color-white;

  .field--name-field-text {
    @extend %lead;

    @media (max-width: $screen-xs-max) {
      padding-top: 2rem;
    }

    strong,
    b {
      @include font-size(2.4);

      @media (min-width: $screen-sm-min) {
        @include font-size(3.5);
      }
    }
  }

  .field--name-field-link {
    margin-top: 3.4rem;

    @media (min-width: $screen-sm-min) {
      margin-top: 4.5rem;
    }

    a {
      @include btn-primary(dark);
    }
  }

  // Hero with text align left
  &.left {
    padding: 11rem 0;
    z-index: 2;

    @media (min-width: $screen-sm-min) {
      margin-top: -$header-height;
      padding-top: 20rem;
    }

    @media (max-width: $screen-sm-max) {
      margin-top: -$header-height-mobile;
    }

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      padding: 11rem 0 5rem 0;
    }

   .hero--give-life__image {
      position: relative;
      width: 100%;
      margin: 2rem 0 4.5rem 0;



      @media (min-width: $screen-sm-min) {
        position: absolute;
        width: calc(100% - 60px);
        height: 66.5rem;
        margin: 0;
      }

      // Heart images
      span {
        display: inline-block;
      }

      .hearts-container {
        position: relative;

        @media (min-width: $screen-xl) {
          left: 55%;
        }

        //Fix hearts bleeding off the edge on md-sized screens.
        @media (max-width: $screen-xl - 1) {
          left: 48%;
        }


        @media (max-width: $screen-xs-max) {
          width: 512px;
          left: calc(50% - 157px);
        }

        @media (max-width: $screen-iphone5-max) { // iPhone5
          left: calc(50% - 130px);
        }


      }

      .heart-6 {
        position: relative;
        z-index: 10;

        @media (max-width: $screen-xs-max) {
          max-width: 314px;
        }

        @media (max-width: $screen-iphone5-max) { // iPhone5
          max-width: 260px;
        }

        @media (min-width: $screen-sm-min) {
          width: 52%;
        }
      }

      .heart-5 {
        position: absolute;
        bottom: 0;
        left: 19%;
        z-index: 5;

        @media (max-width: $screen-xs-max) {
          max-width: 260px;
        }

         @media (max-width: $screen-iphone5-max) { // iPhone5
          max-width: 240px;
          left: 14%;
        }

        @media (min-width: $screen-sm-min) {
          width: 42%;
        }
      }

      .heart-4 {
        position: absolute;
        bottom: 0;
        left: 48%;
        z-index: 4;

        @media (max-width: $screen-xs-max) {
          max-width: 250px;
        }
      }

      .heart-3 {
        position: absolute;
        top: 5rem;
        left: 57%;
        z-index: 7;

        @media (max-width: $screen-xs-max) {
          max-width: 165px;
          top: 3rem;
          left: 67%;
        }
      }

      .heart-2 {
        position: absolute;
        bottom: -10rem;
        left: 48%;

        @media (max-width: $screen-xs-max) {
          max-width: 120px;
          bottom: -5rem;
          left: 54%;
        }
      }

      .heart-1 {
        position: absolute;
        top: -3rem;
        left: 50%;

        @media (max-width: $screen-xs-max) {
          max-width: 80px;
          left: 59%;
        }
      }
    }

    .hero--give-life__content {
      padding-top: 4.4rem;
      position: relative;
      z-index: 2;

      h1 {
        font-family: $font-flama;
        font-weight: 400;
        strong {font-family: $font-flama-semibold;}
        em {font-family: $font-flama-mediumitalic;}

        p {
          font-family: $font-flama;
          font-weight: 400;
          strong {font-family: $font-flama-semibold;}
          em {font-family: $font-flama-mediumitalic;}
        }
      }

      .field--name-field-text {
        p {
          font-weight: 500;
        }

        strong {
          font-family: $font-flama-semibold-italic;
          font-weight: 400;
        }
      }

      @media (min-width: $screen-sm-min) {
        max-width: 48%;
        min-height: 62rem;
        padding-top: 0;
        display: flex;
        flex-wrap: wrap;
        align-content: center;
      }
    }
  }

  // Hero with text align right
  &.right {
    padding: 3.5rem 0 7rem 0;
    overflow: hidden;

    @media (min-width: $screen-sm-min) {
      padding: 11.5rem 0 8rem 0;
    }

    .hero--give-life__image {
      width: 29.5rem;
      margin: 0 auto;

      @media (max-width: $screen-iphone5-max) {
        width: 25rem;
      }

      @media (min-width: $screen-sm-min) {
        width: 50%;
        position: absolute;
        top: 0;
        left: -5%;
      }
    }

    .hero--give-life__content {
      padding-top: 2.5rem;
      @media (min-width: $screen-sm-min) {
        max-width: 47%;
        min-height: 57rem;
        float: right;
      }

      h1 {
        @media (max-width: $screen-xs-max) {
          @include font-size(5);
          padding: 2rem 0 2.8rem 0;
        }
        strong {font-family: $font-flama-semibold;}
        em {font-family: $font-flama-mediumitalic;}

        p {
          font-family: $font-flama;
          font-weight: 400;
          strong {font-family: $font-flama-semibold;}
          em {font-family: $font-flama-mediumitalic;}
        }
      }

      .field--name-field-text {
        font-weight: 500;
        @media (max-width: $screen-xs-max) {
          @include font-size(2.4);
        }
      }
    }
  }

  &.right {
    .hero--give-life__content h1 {
      font-family: $font-flama;
      p {
        font-family: $font-flama;
      }
    }
  }
}

